mongoexpress-conf/mongo-express-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongo-express-ingress
  # annotations:
  #  nginx.ingress.kubernetess.io/rewrite-target: /
  labels:
    name: mongo-express-ingress
    namespace: default
spec:
  rules:
    - host: mongo-express.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: mongo-express-service
                port:
                  number: 8081
          # - pathType: Exact
          #   path: "/analytics"
          #   backend:
          #     service:
          #       name: kubernetess-dashboard.kubernetess-dashboard
          #       port:
          #         number: 8081
          # - pathType: Exact
          #   path: "/error-page"
          #   backend:
          #     service:
          #       name: mongo-express-error-service
          #       port:
          #         number: 8081
